--- a/index.html
+++ b/index.html
@@ -1,115 +1,132 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/fonts/fonts.css">
-  </head>
-  <body>
- <header class="header">
-  <nav class="header_menu">
- <ul class="menu_links">
-    <a href="#" class="header_active">главная</a>
-<li class="header_list">
-  <a href="#">посмотреть лоты</a>
-</li>
-<li class="header_list">
-  <a href="#">об аукционе</a>
-</li>
-</ul>
-   </nav>
-<div class="header_logo">
- <img src="images/logo-black.svg" alt="" class="header_logo-image">
-</div>
-<div class="header_address">
-<div class="address">
- <a href="#">+9 999 555 5555</a> <br>
- <a href="#">info@sobaka.ge</a>
-</div>
- <p>наб. Принсенграхт 263- <br>265, Амстердам</p>
-</div>
- </header>
-<main>
-<section class="cover">
-  <div class="overlay"></div>
- <h1 class="cover_title">
-   <span class="aligned-text"><span class="letter-spacing-extended">ОН</span>О</span>
-   <span class="aligned-text_center">ТЕ<span class="letter-spacing-extended">БЕ</span></span>
-   <span class="aligned-text_right"><span class="letter-spacing-extended">Н</span>АД<span class="no-letter-spacing">О</span></span>
- </h1>
- <div class="cover__description">
-   <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-   <a href="#" class="bet-button">Сделать ставку</a>
- </div>
-</section>
-<a href="#" class="name_list">ЛОТЫ</a>
-<ul class="lost_card_list">
- <li class="lots_card_list_item">
-  <a href="#" class="card_link">
-   <article class="card">
-    <div class="overlay_card"></div>
-     <div class="card_type_film">
-      <h3 class="card_title">Фильм режиссёра, который бросил киношколу</h3>
-      <p class="card_text_film">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-     </div>
-   </article>
-  </a>
- </li>
- <li class="lots_card_list_item">
-  <a href="#" class="card_link">
-   <article class="card">
-    <div class="overlay_card"></div>
-    <div class="card_type_book">
-     <h3 class="card_title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-     <p class="card_text_book">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+  <link rel="stylesheet" href="/styles/global.css">
+  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="/fonts/fonts.css">
+</head>
+
+<body>
+  <header class="header">
+    <nav class="header_menu">
+      <ul class="menu_links">
+        <a href="#" class="header_active">главная</a>
+        <li class="header_list">
+          <a href="#">посмотреть лоты</a>
+        </li>
+        <li class="header_list">
+          <a href="#">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="header_logo">
+      <img src="images/logo-black.svg" alt="" class="header_logo-image">
     </div>
-   </article>
-  </a>
- </li>
- <li class="lots_card_list_item">
-  <a href="#" class="card_link">
-   <article class="card">
-    <div class="overlay_card"></div>
-    <div class="card_type_picture">
-     <h3 class="card_title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-     <p class="card_text_picture">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+    <div class="header_address">
+      <div class="address">
+        <a href="#">+9 999 555 5555</a> <br>
+        <a href="#">info@sobaka.ge</a>
+      </div>
+      <p>наб. Принсенграхт 263- <br>265, Амстердам</p>
     </div>
-   </article>
-  </a>
- </li>
-</ul>
-</div>
- <a href="#" class="look_more">посмотреть больше</a>
-<section class="about">
- <div class="about_logo">
-  <img src="/images/logo-white.svg" alt="" class="about_logo_image">
- </div>
- <p class="about_title">Об аукционе</p>
- <p class="about_text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями? Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
- <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-  на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
-</section>
-</main>
+  </header>
+  <main>
+    <section class="cover">
+      <div class="overlay"></div>
+      <h1 class="cover_title">
+        <span class="aligned-text"><span class="letter-spacing-extended">ОН</span>О</span>
+        <span class="aligned-text_center">ТЕ<span class="letter-spacing-extended">БЕ</span></span>
+        <span class="aligned-text_right"><span class="letter-spacing-extended">Н</span>АД<span
+            class="no-letter-spacing">О</span></span>
+      </h1>
+      <div class="cover__description">
+        <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+        <a href="#" class="bet-button">Сделать ставку</a>
+      </div>
+    </section>
+    <a href="#" class="name_list">ЛОТЫ</a>
+    <ul class="lost_card_list">
+      <li class="lots_card_list_item">
+        <a href="#" class="card_link">
+          <article class="card">
+            <div class="overlay_card"></div>
+            <div class="card_type_film">
+              <h3 class="card_title">Фильм режиссёра, который бросил киношколу</h3>
+              <p class="card_text_film">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы
+                не знали, что режиссёр — Пол Томас Андерсон?</p>
+            </div>
+          </article>
+        </a>
+      </li>
+      <li class="lots_card_list_item">
+        <a href="#" class="card_link">
+          <article class="card">
+            <div class="overlay_card"></div>
+            <div class="card_type_book">
+              <h3 class="card_title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+              <p class="card_text_book">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+                древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная
+                с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на
+                «Улисса» Джеймса Джойса?</p>
+            </div>
+          </article>
+        </a>
+      </li>
+      <li class="lots_card_list_item">
+        <a href="#" class="card_link">
+          <article class="card">
+            <div class="overlay_card"></div>
+            <div class="card_type_picture">
+              <h3 class="card_title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+              <p class="card_text_picture">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+                инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали,
+                что это — одна из революционных работ Кандинского?</p>
+            </div>
+          </article>
+        </a>
+      </li>
+    </ul>
+    </div>
+    <a href="#" class="look_more">посмотреть больше</a>
+    <section class="about">
+      <div class="about_logo">
+        <img src="/images/logo-white.svg" alt="" class="about_logo_image">
+      </div>
+      <p class="about_title">Об аукционе</p>
+      <p class="about_text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши
+        лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или
+        картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями? Здесь вы
+        не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были
+        попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может
+        нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+      <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
+        растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+        на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру.
+        Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+    </section>
+  </main>
   <footer class="footer">
     <div class="address_footer">
-     <a href="#">+9 999 555 5555</a> <br>
-     <a href="#">info@sobaka.ge</a>
-     <p class="footer_text_address">наб. Принсенграхт 263- <br> 265, Амстердам</p>
+      <a href="#">+9 999 555 5555</a> <br>
+      <a href="#">info@sobaka.ge</a>
+      <p class="footer_text_address">наб. Принсенграхт 263- <br> 265, Амстердам</p>
     </div>
     <div class="footer_menu">
       <a href="#" class="footer_menu_main">главная</a> <br>
       <a href="#">посмотреть лоты</a> <br>
       <a href="#">об аукционе</a>
     </div>
-     <div class="footer_social-list-item">
+    <div class="footer_social-list-item">
       <a href="#"><img src="images/yt.svg" alt=""></a>
       <a href="#"><img src="images/vk.svg" alt=""></a>
       <a href="#"><img src="images/pinterest.svg" alt=""></a>
-     </div>
+    </div>
   </footer>
- </body>
+</body>
+
 </html>
